slick bug on mobile

--- a/static/css/trending-post.css
+++ b/static/css/trending-post.css
@@ -31,9 +31,9 @@
   height: max-content;
   overflow: hidden;
   margin: 0 auto;
-  display: table;
-  table-layout: fixed;
-  width: 100%;
+  display: table !important;
+	table-layout: fixed !important;
+	width: 100% !important;
 }
 
 .slick-prev-btn {
